--- a/styles.css
+++ b/styles.css
@@ -2,42 +2,87 @@
 
 html {
   height: 100%;
-
   width: 100%;
-
   font-family: "Poppins", sans-serif;
 }
 
-h1 {
+body {
+  background-image: url(https://cdn.wallpapersafari.com/22/81/eyXLRj.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   text-align: center;
 }
 
+h1 {
+  font-size: 50px;
+  font-style: italic;
+  color: slateblue;
+  text-shadow: 4px 4px 1px mediumvioletred;
+  margin-bottom: 80px;
+}
+
+h1:hover {
+  font-size: 60px;
+  color: dodgerblue;
+  text-shadow: 4px 4px 30px black;
+}
 form {
-  max-width: 300px;
-
-  margin: 0 auto;
-
+  max-width: 550px;
+  margin: 20px auto;
+  background-color: rgba(68, 67, 67, 0.324);
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 30px deeppink;
   font-family: "Poppins", sans-serif;
-
   text-align: center;
 }
 
 div {
-  margin-bottom: 10px;
-
+  margin-bottom: 15px;
   font-family: "Poppins", sans-serif;
 }
 
-button {
-  font-family: "Poppins", sans-serif;
+label {
+  font-size: 20px;
+  font-style: bold;
+  color: cyan;
+  text-shadow: 3px 3px 15px white;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
+input {
+  width: 80%;
+  background-color: midnightblue;
+  box-shadow: 2px 2px 30px black;
+  border: none;
+  padding: 8px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+button {
+  font-size: 15px;
+  background-color: mediumvioletred;
+  box-shadow: 2px 2px 20px black;
+  color: cyan;
+  text-shadow: 2px 2px 20px cyan;
+  border: none;
+  border-radius: 5px;
+  width: 30%;
+  padding: 10px;
+  margin-top: 20px;
+  font-family: "Poppins", sans-serif;
   cursor: pointer;
 }
 
+button:hover {
+  font-size: 20px;
+  background-color: magenta;
+}
 #message {
   text-align: center;
-
   font-size: 20px;
-
   margin-top: 10px;
 }
